Import of COG/PT-PostalCode-0.02 from CPAN.
gitpan-cpan-distribution: PT-PostalCode
gitpan-cpan-version:      0.02
gitpan-cpan-path:         COG/PT-PostalCode-0.02.tar.gz
gitpan-cpan-author:       COG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension PT::PostalCode.
 
+0.02  Sep Thu 30 23:20:31 2004
+	- Perl required version is now 5.006 (was 5.008)
+	- minor changes in the documentation
+	- added META.yml
+
 0.01  Thu May 15 20:34:31 2004
 	- first release ready
 
