Import of COG/PT-PostalCode-0.03 from CPAN.
gitpan-cpan-distribution: PT-PostalCode
gitpan-cpan-version:      0.03
gitpan-cpan-path:         COG/PT-PostalCode-0.03.tar.gz
gitpan-cpan-author:       COG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension PT::PostalCode.
 
-0.02  Sep Thu 30 23:20:31 2004
+0.03  Wed Nov 03 20:09:00 2004
+	- improved the documentation, explaining each function
+	- added pod.t and pod-coverage.t to the tests directory
+
+0.02  Thu Sep 30 23:20:31 2004
 	- Perl required version is now 5.006 (was 5.008)
 	- minor changes in the documentation
 	- added META.yml
